--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.sql.init.platform=h2
 
+spring.jackson.serialization.INDENT_OUTPUT = true
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:h2:mem:iwdb
 # spring.datasource.url=jdbc:h2:file:./iwdb
