--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.jackson.serialization.INDENT_OUTPUT = true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:h2:mem:iwdb
 # spring.datasource.url=jdbc:h2:file:./iwdb
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # spring.jpa.show-sql=true
